--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,9 @@
     <attr format="reference" name="colorInicio"/>
     <attr format="reference" name="colorVoltar"/>
 
+    <attr format="reference" name="subtitleStyle"/>
+
+
 
 
     <attr format="reference" name="viewPagerDotsStyle"/>
