--- a/app/src/main/res/navigation/login.xml
+++ b/app/src/main/res/navigation/login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login"
     app:startDestination="@id/splashScreenFragment">
+
     <fragment
         android:id="@+id/splashScreenFragment"
         android:name="br.iesb.mobile.netflics.ui.fragment.onboarding.SplashScreenFragment"
@@ -15,6 +16,7 @@
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"/>
     </fragment>
+
     <fragment
         android:id="@+id/onboardingFragment4"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.onboarding.OnboardingFragment"
@@ -24,28 +26,37 @@
             android:id="@+id/action_onboardingFragment4_to_loginFragment2"
             app:destination="@id/loginFragment2" />
     </fragment>
+
     <fragment
         android:id="@+id/loginFragment2"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.LoginFragment"
-        android:label="LoginFragment" >
-        <action
-            android:id="@+id/action_loginFragment2_to_cadastroFragment"
-            app:destination="@id/cadastroFragment" />
+        android:label="LoginFragment"
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment2_to_esqueciFragment"
             app:destination="@id/esqueciFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/cadastroFragment"
-        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.CadastroFragment"
-        android:label="CadastroFragment" >
         <action
-            android:id="@+id/action_cadastroFragment_to_loginFragment2"
-            app:destination="@id/loginFragment2" />
+            android:id="@+id/action_loginFragment2_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_loginFragment2_to_cadastroFragment"
+            app:destination="@id/cadastroFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/esqueciFragment"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.EsqueciFragment"
         android:label="fragment_esqueci"
         tools:layout="@layout/fragment_esqueci" />
+
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.HomeFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/fragment_home"/>
+    <fragment
+        android:id="@+id/cadastroFragment"
+        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.CadastroFragment"
+        android:label="CadastroFragment" />
+
 </navigation>
