navegação login pronta > Arrumar mensagem de sucesso/erro

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,12 +40,13 @@
             android:fontFamily="@font/lohengrin"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
+            android:text="@={viewmodel.email}"
             android:letterSpacing="0.4"
             android:textColorHint="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@={viewmodel.email}"/>
+            />
 
 <!--        <com.google.android.material.textfield.TextInputLayout-->
 <!--            android:id="@+id/etEmailLogin"-->
