--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,6 +95,7 @@
             android:layout_marginBottom="32dp"
             android:fontFamily="@font/lohengrin"
             android:letterSpacing="0.3"
+            android:onClick="@{fragmentLogin::forgot}"
             android:text="Esqueci a palavra mágica"
             android:textColor="@color/white"
             android:textSize="18sp"
