mudança de bckgrnd no xml > esqueci crash

--- a/app/src/main/res/layout/fragment_esqueci.xml
+++ b/app/src/main/res/layout/fragment_esqueci.xml
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?colorOnPrimary">
+        android:background="@drawable/bg2">
 
         <ImageView
             android:id="@+id/ivEsqueciLogo"
@@ -28,24 +28,46 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
+        <EditText
+            android:id="@+id/etEmailForgot"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
+            android:ems="10"
+            android:fontFamily="@font/lohengrin"
+            android:hint="@string/hint_cadastro_email"
+            android:inputType="textEmailAddress"
+            android:letterSpacing="0.2"
+            android:text="@={viewmodel.email}"
+            android:textColorHint="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/btEnviarEmail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivEsqueciLogo">
+            app:layout_constraintTop_toBottomOf="@+id/ivEsqueciLogo" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ems="10"
-                android:hint="@string/email_hint"
-                android:inputType="textEmailAddress"
-                android:text="@={viewmodel.email}" />
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/textInputLayout"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="128dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/ivEsqueciLogo">-->
 
-        </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/etForgotEmail"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="@null"-->
+<!--                android:ems="10"-->
+<!--                android:fontFamily="@font/lohengrin"-->
+<!--                android:hint="@string/email_hint"-->
+<!--                android:inputType="textEmailAddress"-->
+<!--                android:letterSpacing="0.2"-->
+<!--                android:text="@={viewmodel.email}"-->
+<!--                android:textColorHint="@color/white" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
+
         <Button
             android:id="@+id/btEnviarEmail"
             style="?primaryButtonStyle"
@@ -54,8 +76,8 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
-            android:text="Enviar"
             android:onClick="@{fragment::forgot}"
+            android:text="Enviar"
             app:layout_constraintBottom_toTopOf="@+id/btVoltarEsqueci"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
