--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,10 +7,11 @@
             name="fragmentHome"
             type="br.iesb.mobile.rpg_pi2_20211.ui.fragment.HomeFragment" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?colorOnPrimary">
+        android:background="@drawable/bg2">
 
         <ImageView
             android:id="@+id/imageView"
