--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?colorOnPrimary"
+        android:background="@drawable/bg2"
         tools:context=".ui.activity.antigos.MainActivity">
 
         <ImageView
@@ -40,36 +40,35 @@
             android:fontFamily="@font/lohengrin"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
-            android:text="@={viewmodel.email}"
             android:letterSpacing="0.4"
+            android:text="@={viewmodel.email}"
             android:textColorHint="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/etEmailLogin"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="32dp"-->
-<!--            android:layout_marginEnd="32dp"-->
-<!--            android:ems="10"-->
-<!--            android:hint="@string/hint_email"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/etSenhaLogin"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/ivLogo">-->
+        <!--        <com.google.android.material.textfield.TextInputLayout-->
+        <!--            android:id="@+id/etEmailLogin"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="32dp"-->
+        <!--            android:layout_marginEnd="32dp"-->
+        <!--            android:ems="10"-->
+        <!--            android:hint="@string/hint_email"-->
+        <!--            app:layout_constraintBottom_toTopOf="@+id/etSenhaLogin"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/ivLogo">-->
 
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:fontFamily="@font/lohengrin"-->
-<!--                android:ems="10"-->
-<!--                android:hint="@string/email_hint"-->
-<!--                android:inputType="textEmailAddress"-->
-<!--                android:text="@={viewmodel.email}" />-->
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
+        <!--            <com.google.android.material.textfield.TextInputEditText-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:fontFamily="@font/lohengrin"-->
+        <!--                android:ems="10"-->
+        <!--                android:hint="@string/email_hint"-->
+        <!--                android:inputType="textEmailAddress"-->
+        <!--                android:text="@={viewmodel.email}" />-->
+        <!--        </com.google.android.material.textfield.TextInputLayout>-->
 
         <EditText
             android:id="@+id/etSenhaLogin"
@@ -82,11 +81,11 @@
             android:hint="@string/hint_senha"
             android:inputType="numberPassword"
             android:letterSpacing="0.2"
+            android:text="@={viewmodel.password}"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline2"
-            android:text="@={viewmodel.password}"/>
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
         <TextView
             android:id="@+id/tvEsqueci"
@@ -111,8 +110,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="@string/botao_entrar"
             android:onClick="@{fragmentLogin::login}"
+            android:text="@string/botao_entrar"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/btCad"
             app:layout_constraintEnd_toEndOf="parent"
@@ -127,8 +126,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="@string/botao_cad"
             android:onClick="@{fragmentLogin::startCadastro}"
+            android:text="@string/botao_cad"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/tvEsqueci"
             app:layout_constraintEnd_toEndOf="parent"
