--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -116,6 +116,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="30dp"
             android:text="@string/botao_cadastro_voltar"
+            android:onClick="@{fragment::back}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
