--- a/app/src/main/res/layout/fragment_esqueci.xml
+++ b/app/src/main/res/layout/fragment_esqueci.xml
@@ -91,7 +91,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             android:text="Voltar"
-
+            android:onClick="@{fragment::back}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
