--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,6 +45,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:text="Personagem 2"
+            android:onClick="@{fragmentHome::criarPersonagem}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
