--- a/app/src/main/res/layout/fragment_criar_personagem_onboarding.xml
+++ b/app/src/main/res/layout/fragment_criar_personagem_onboarding.xml
@@ -100,6 +100,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="25dp"
             android:text="@string/botao_cadastro_confirmar"
+            android:onClick="@{fragment::start}"
             app:layout_constraintBottom_toTopOf="@+id/btCriarVolta"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -114,6 +115,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="30dp"
             android:text="@string/botao_cadastro_voltar"
+            android:onClick="@{fragment::back}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
